gcc/testsuite/rust/rustc/ui/if/ifmt-unknown-trait.rs
fn main() {
    format!("{:notimplemented}", "3");
// { dg-error "" "" { target *-*-* } .-1 }
}

